# ConnectFour-RL-DQN

./: .gitattributes  Makefile  README.md  pyproject.toml
metrics/: __dqn_training_metrics_random_first_player_130000.json  __dqn_training_metrics_random_first_player_last.json  _dqn_training_metrics_random_first_player.json  dqn_training_metrics_random_first_player_0.json  dqn_training_metrics_random_first_player_10000.json  dqn_training_metrics_random_first_player_190000.json  dqn_training_metrics_random_first_player_20000.json  dqn_training_metrics_random_first_player_30000.json  dqn_training_metrics_random_first_player_60000.json  dqn_training_metrics_random_first_player_70000.json  dqn_training_metrics_random_first_player_last.json  dqn_training_metrics_random_first_player_last_conv.json  dqn_training_metrics_random_first_player_last_dualing.json  dqn_training_metrics_random_first_player_last_mps.json  dqn_training_metrics_self_play_0.json  dqn_training_metrics_self_play_10000.json  dqn_training_metrics_self_play_150000.json  dqn_training_metrics_self_play_230000.json  dqn_training_metrics_self_play_290000.json  dqn_training_metrics_self_play_last.json  dqn_training_metrics_self_play_last_dualing.json  dqn_training_metrics_self_play_last_mps.json  training_metrics.json  training_metrics_curriculum.json  training_metrics_deep_curriculum.json  training_metrics_random.json  training_metrics_random_second_player.json  training_metrics_self_play.json
models/: agent_mm.npy  dqn_agent_opponent.pth  dqn_agent_random_first_player.pth  dqn_agent_random_first_player_dualing.pth  (+2 more)
(+35 files in other folders)
