[tool.poetry]
name = "connectfour-rl-dqn"
version = "0.1.0"
description = "This repository implements a reinforcement learning solution for the Connect Four game, demonstrating the transition from simple to complex game AI."
authors = ["Patrick Kalkman <patrick@simpletechture.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pettingzoo = "1.24.3"
pygame = "2.6.1"
numpy = "2.1.3"
torch = "2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
